--- a/UDP_Packet_Repeater_Installer/Product.wxs
+++ b/UDP_Packet_Repeater_Installer/Product.wxs
@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-	<Product Id="*" Name="UDP Repeater Service" Language="1033" Version="1.0.0.0" 
-			 Manufacturer="JT4 LLC" UpgradeCode="07b96bd4-d109-4c22-a924-70f8326a1be9">
-		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+	<Package Name="UDP Repeater Service" Language="1033" Version="1.0.0.0" Manufacturer="JT4 LLC" UpgradeCode="07b96bd4-d109-4c22-a924-70f8326a1be9" InstallerVersion="200">
+		
 
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
 		<MediaTemplate EmbedCab="yes" />
@@ -12,52 +10,50 @@
 			<ComponentGroupRef Id="Repeater_ConfigFiles" />
 			<ComponentGroupRef Id="Repeater_ServiceInstaller" />
 		</Feature>
-	</Product>
+	</Package>
 
 	<Fragment>
-		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
+			<StandardDirectory Id="ProgramFilesFolder">
 				<Directory Id="INSTALLFOLDER" Name="UDP_Repeater_Service" />
-			</Directory>
-		</Directory>
-	</Fragment>
+			</StandardDirectory>
+		</Fragment>
 
 
 	<!--DEPENDENCY FILES-->
 	<Fragment>
 		<ComponentGroup Id="Repeater_DependencyFiles" Directory="INSTALLFOLDER">
 			<Component Guid="CB0604BE-202F-4A0B-BBEF-F4C962CE463A">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)Microsoft.Bcl.AsyncInterfaces.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_Microsoft.Bcl.AsyncInterfaces.dll" Source="$(var.UDP_Repeater_Service.TargetDir)Microsoft.Bcl.AsyncInterfaces.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="ABA12169-33E8-4140-A547-1268DA306C61">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)Newtonsoft.Json.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_Newtonsoft.Json.dll" Source="$(var.UDP_Repeater_Service.TargetDir)Newtonsoft.Json.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="4A1DA99A-DC08-4E9E-9C05-88987C18D6D4">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)PacketDotNet.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_PacketDotNet.dll" Source="$(var.UDP_Repeater_Service.TargetDir)PacketDotNet.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="1dd19b92-90f8-4290-b495-1b6f920f5e79">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)SharpPcap.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_SharpPcap.dll" Source="$(var.UDP_Repeater_Service.TargetDir)SharpPcap.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="744f6f71-2a05-4ff8-9052-8c2d434c7de6">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Buffers.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Buffers.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Buffers.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="7248c35a-3203-4254-ac41-0afc422b311f">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Memory.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Memory.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Memory.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="cb5d0eff-0e7b-432d-bca2-adeeb2508d93">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Numerics.Vectors.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Numerics.Vectors.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Numerics.Vectors.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="66177735-3e01-4255-83a8-d6c5541073ce">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Runtime.CompilerServices.Unsafe.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Runtime.CompilerServices.Unsafe.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Runtime.CompilerServices.Unsafe.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="b3f5479f-8073-48e7-9c72-0207b85ee7bb">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Text.Encoding.CodePages.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Text.Encoding.CodePages.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Text.Encoding.CodePages.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="969b6c2a-fd8b-4f69-90b2-0612050fac62">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.Threading.Tasks.Extensions.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.Threading.Tasks.Extensions.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.Threading.Tasks.Extensions.dll" KeyPath="yes" />
 			</Component>
 			<Component Guid="b346745e-8a0e-4984-a611-0285d8b154a1">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)System.ValueTuple.dll" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_System.ValueTuple.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.ValueTuple.dll" KeyPath="yes" />
 			</Component>
 		</ComponentGroup>
 	</Fragment>
@@ -66,7 +62,7 @@
 	<Fragment>
 		<ComponentGroup Id="Repeater_ConfigFiles" Directory="INSTALLFOLDER">
 			<Component Guid="17C70FC2-4AF5-4381-9FBE-B9C4D062E74A">
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.exe.config" KeyPath="yes"/>
+				<File Id="___var.UDP_Repeater_Service.TargetDir_UDP_Repeater_Service.exe.config" Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.exe.config" KeyPath="yes" />
 			</Component>
 		</ComponentGroup>
 	</Fragment>
@@ -74,18 +70,10 @@
 	<!--SERVICE-->
 	<Fragment>
 		<ComponentGroup Id="Repeater_ServiceInstaller" Directory="INSTALLFOLDER">
-			<Component Guid="F7E041AB-3227-4272-92C1-4A12685F30AF" >
-				<File Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.exe" KeyPath="yes"/>
-				<ServiceInstall Id="ServiceInstaller"
-								Type="ownProcess"
-								Name="UDP_Repeater_Service"
-								DisplayName="UDP Packet Repeater Service"
-								Description="A UDP Packet Sniffer and Repeater."
-								Start="auto"
-								ErrorControl="normal"
-								Account="LocalSystem"/>
-				<ServiceControl Id="StartService" Start="install" Stop="both"
-								Remove="uninstall" Name="UDP_Repeater_Service" Wait="yes" />
+			<Component Guid="F7E041AB-3227-4272-92C1-4A12685F30AF">
+				<File Id="___var.UDP_Repeater_Service.TargetDir_UDP_Repeater_Service.exe" Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.exe" KeyPath="yes" />
+				<ServiceInstall Id="ServiceInstaller" Type="ownProcess" Name="UDP_Repeater_Service" DisplayName="UDP Packet Repeater Service" Description="A UDP Packet Sniffer and Repeater." Start="auto" ErrorControl="normal" Account="LocalSystem" />
+				<ServiceControl Id="StartService" Start="install" Stop="both" Remove="uninstall" Name="UDP_Repeater_Service" Wait="yes" />
 			</Component>
 		</ComponentGroup>
 	</Fragment>
