--- a/UDP_Packet_Repeater_Installer/Product.wxs
+++ b/UDP_Packet_Repeater_Installer/Product.wxs
@@ -81,11 +81,6 @@
 					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"
 					  KeyPath="yes" />
 			</Component>
-			<!--<Component Guid="ffae1a37-eb14-43be-b85c-de2d5a89e11d">
-				<File Id="EventLogMessages.dll"
-					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"
-					  KeyPath="yes" />
-			</Component>-->
 		</ComponentGroup>
 	</Fragment>
 
@@ -98,8 +93,8 @@
 					  KeyPath="yes" />
 			</Component>
 			<Component Guid="6903a699-0f2c-4274-9b17-e1ccd6232aa3">
-				<File Id="___var.UDP_Repeater_GUI.TargetDir_UDP_Test_GUI.exe.config"
-					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Test_GUI.exe.config"
+				<File Id="___var.UDP_Repeater_GUI.TargetDir_UDP_Repeater_GUI.exe.config"
+					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Repeater_GUI.exe.config"
 					  KeyPath="yes" />
 			</Component>
 		</ComponentGroup>
@@ -114,7 +109,7 @@
 				<Shortcut Id="ApplicationStartMenuShortcut"
 						  Name="UDP Packet Repeater"
 						  Description="A UDP Packet Sniffer and Repeater."
-						  Target="[INSTALLFOLDER]UDP_Test_GUI.exe"
+						  Target="[INSTALLFOLDER]UDP_Repeater_GUI.exe"
 						  WorkingDirectory="INSTALLFOLDER">
 					<Icon Id="JT4_Icon" SourceFile="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"/>
 				</Shortcut>
@@ -130,7 +125,7 @@
 				<Shortcut Id="ApplicationStartupFolderShortcut"
 						  Name="UDP Packet Repeater"
 						  Description="A UDP Packet Sniffer and Repeater."
-						  Target="[INSTALLFOLDER]UDP_Test_GUI.exe"
+						  Target="[INSTALLFOLDER]UDP_Repeater_GUI.exe"
 						  WorkingDirectory="INSTALLFOLDER">
 					<Icon Id="JT4_Logo" SourceFile="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"/>
 				</Shortcut>
@@ -146,7 +141,7 @@
 		<ComponentGroup Id="GUI_Actual_Program_Installer" Directory="INSTALLFOLDER">
 			<Component Guid="9343b74f-a17d-4731-9586-dd0456cf00fc">
 				<File Id="___var.UDP_Repeater_GUI.TargetDir_UDP_Repeater_GUI.exe"
-					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Test_GUI.exe"
+					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Repeater_GUI.exe"
 					  KeyPath="yes" />
 				<util:EventSource Log="UDP Packet Repeater"
 								  Name="UDP_Repeater_Frontend"
@@ -159,7 +154,7 @@
 					  Impersonate="yes"
 					  Return="asyncNoWait"
 					  Directory="INSTALLFOLDER"
-					  ExeCommand="[INSTALLFOLDER]UDP_Test_GUI.exe" />
+					  ExeCommand="[INSTALLFOLDER]UDP_Repeater_GUI.exe" />
 
 		<InstallExecuteSequence>
 			<Custom Action="EXECUTE_AFTER_FINALIZE" After="InstallFinalize" Condition="NOT Installed" />
