--- a/UDP_Packet_Repeater_Installer/Product.wxs
+++ b/UDP_Packet_Repeater_Installer/Product.wxs
@@ -167,20 +167,37 @@
 		<ComponentGroup Id="Repeater_ServiceInstaller" Directory="INSTALLFOLDER">
 			<Component Guid="F7E041AB-3227-4272-92C1-4A12685F30AF">
 				<File Id="___var.UDP_Repeater_Service.TargetDir_UDP_Repeater_Service.exe" Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.exe" KeyPath="yes" />
-				<ServiceInstall Id="ServiceInstaller" 
-								Type="ownProcess" 
-								Name="UDP_Repeater_Service" 
-								DisplayName="UDP Packet Repeater Service" 
-								Description="A UDP Packet Sniffer and Repeater." 
-								Start="auto" 
-								ErrorControl="normal" 
-				Account="LocalSystem" />
+
+				<util:EventSource Log="UDP Packet Repeater"
+								  Name="UDP_Repeater_Backend"
+								  EventMessageFile="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\EventLogMessages.dll"/>
+
+				<ServiceInstall Id="ServiceInstaller"
+								Type="ownProcess"
+								Name="UDP_Repeater_Service"
+								DisplayName="UDP Packet Repeater Service"
+								Description="A UDP Packet Sniffer and Repeater."
+								Start="auto"
+								ErrorControl="normal"
+								Account="LocalSystem" >
+								
+								<util:ServiceConfig FirstFailureActionType='restart'
+													SecondFailureActionType='restart'
+													ThirdFailureActionType='restart'
+													RestartServiceDelayInSeconds='15'
+													ResetPeriodInDays='1'/>
+				</ServiceInstall>
+				
+				
 				<ServiceControl Id="StartService" 
 								Start="install"
 								Stop="both"
 								Remove="uninstall"
 								Name="UDP_Repeater_Service"
 								Wait="yes" />
+				
+				
+				
 			</Component>
 		</ComponentGroup>
 	</Fragment>
