--- a/UDP_Packet_Repeater_Installer/Product.wxs
+++ b/UDP_Packet_Repeater_Installer/Product.wxs
@@ -75,15 +75,10 @@
 			<Component Guid="b346745e-8a0e-4984-a611-0285d8b154a1">
 				<File Id="System.ValueTuple.dll" Source="$(var.UDP_Repeater_Service.TargetDir)System.ValueTuple.dll" KeyPath="yes" />
 			</Component>
-			<Component Guid="ffae1a37-eb14-43be-b85c-de2d5a89e11d">
-				<File Id="___var.UDP_Repeater_GUI.TargetDir_jt4_logo.ico"
-					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"
-					  KeyPath="yes" />
-			</Component>
 		</ComponentGroup>
 	</Fragment>
 
-	<!--CONFIG FILES-->
+	<!--OTHER MISCELLANEOUS FILES-->
 	<Fragment>
 		<ComponentGroup Id="Repeater_ConfigFiles" Directory="INSTALLFOLDER">
 			<Component Guid="17C70FC2-4AF5-4381-9FBE-B9C4D062E74A">
@@ -94,6 +89,21 @@
 			<Component Guid="6903a699-0f2c-4274-9b17-e1ccd6232aa3">
 				<File Id="___var.UDP_Repeater_GUI.TargetDir_UDP_Repeater_GUI.exe.config"
 					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Repeater_GUI.exe.config"
+					  KeyPath="yes" />
+			</Component>
+			<Component Guid="ffae1a37-eb14-43be-b85c-de2d5a89e11d">
+				<File Id="___var.UDP_Repeater_GUI.TargetDir_jt4_logo.ico"
+					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico"
+					  KeyPath="yes" />
+			</Component>
+			<Component Guid="fbf32a72-c668-489e-a4a7-3d0f7b13208c">
+				<File Id="UDP_Repeater_GUI.pdb"
+					  Source="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\UDP_Repeater_GUI.pdb"
+					  KeyPath="yes" />
+			</Component>
+			<Component Guid="5e8efe1b-aa13-4b46-bcaa-5d72aad4dfd1">
+				<File Id="UDP_Repeater_Service.pdb"
+					  Source="$(var.UDP_Repeater_Service.TargetDir)UDP_Repeater_Service.pdb"
 					  KeyPath="yes" />
 			</Component>
 		</ComponentGroup>
