--- a/Packet_Repeater_Installer/Bundle.wxs
+++ b/Packet_Repeater_Installer/Bundle.wxs
@@ -2,14 +2,17 @@
 	 xmlns:bal="http://wixtoolset.org/schemas/v4/wxs/bal">
 	
 	
-    <Bundle Name="Packet_Repeater_Installer" 
+    <Bundle Name="UDP Packet Repeater" 
 			Manufacturer="JT4 LLC" 
 			Version="1.0.0.0" 
 			UpgradeCode="ed0db20e-808e-41c9-9c42-200ec2ba04d7"
 			IconSourceFile="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico">
 
 		<BootstrapperApplication>
-			<bal:WixStandardBootstrapperApplication LicenseUrl="" Theme="hyperlinkLicense"  />
+			<bal:WixStandardBootstrapperApplication 
+				LicenseUrl="" 
+				Theme="hyperlinkLicense"  
+				ThemeFile="HyperlinkTheme.xml"/>
 		</BootstrapperApplication>
 
         <Chain>
@@ -27,8 +30,8 @@
             <!-- FRONTEND AND BACKEND INSTALLER -->
 			<PackageGroupRef Id="Repeater_Installer"/>
         </Chain>
-
     </Bundle>
+
 
 	<Fragment>
 		<PackageGroup Id="Repeater_Installer">
